# selinux-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
examples/: file.rs  path.rs  process.rs
selinux-macros/: Cargo.toml  lib.rs
selinux-sys/: Cargo.toml  build.rs  wrapper.h
src/: avc.rs  context.rs  error.rs  ffi.rs  lib.rs  scon.rs  utils.rs
