[package]
name = "selinux"
version = "0.1.0"
authors = ["nibon7 <nibon7@163.com>"]
edition = "2018"
categories = ["api-bindings"]
description = "Bindings for libselinux"
keywords = ["selinux"]
readme = "README.md"
repository = "https://github.com/nibon7/selinux-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
errno = "0.2"
selinux-macros = { path = "selinux-macros" }
selinux-sys = { path = "selinux-sys" }

[workspace]
members = [
    "selinux-macros",
    "selinux-sys"
]

[features]
default = []
build-static-libselinux = ["selinux-sys/build-static"]
