[package]
name = "selinux-sys"
version = "0.1.0"
authors = ["Qiu Wenbo <qiuwenbo@kylinos.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", optional = true }
glob = { version = "0.3.0", optional = true }
pkg-config = "0.3"
bindgen = { version = "0.55", default-features = false, features = ["runtime"] }

[features]
default = []
build-static = ["cc", "glob"]
